# knot

./: .gitignore  .gitlab-ci.yml  Dockerfile  NEWS  pyproject.toml  setup.py
.github/workflows/: macOS.yaml
ci/config/: docs.yml
daemon/: defer.c  defer.h  main.c  worker.c
distro/pkg/deb/: knot-resolver6.install
distro/pkg/rpm/: knot-resolver.spec
doc/: kresd.8.in
doc/dev/: build.rst  index.rst
doc/user/: config-local-data.rst  config-network-server-tls.rst  config-overview.rst  config-performance.rst  manager-api.rst
etc/config/: config.example.docker.yaml
manager/etc/knot-resolver/: config.dev.yaml
manager/knot_resolver_manager/: kres_manager.py
manager/knot_resolver_manager/datamodel/: local_data_schema.py
manager/knot_resolver_manager/kresd_controller/: interface.py
manager/knot_resolver_manager/kresd_controller/supervisord/: __init__.py
modules/: meson.build
modules/coap/: README.rst  coap.c  meson.build
python/knot_resolver/datamodel/templates/: network.lua.j2
python/knot_resolver/manager/files/: watchdog.py
tests/packaging/interactive/: watchdog.sh
